@@ -1,3 +1,10 @@
+2010-02-22	Marzo Sette Torres Junior <marzojr@yahoo.com>
+	* Fixed bugs:
+	  #2819210 newfilegump.cc (4 buttons one pixel too far to the right)
+	  #2838846 Text background button sticks out 20 pixels
+	* gamemgr/modmgr.cc: Removed some redundant variables. Patch dir now behaves
+	  identically to mods dir as far as default paths go.
+
 2010-02-22 Dominik Reichardt <dominus@users.sourceforge.net>
 	* win32/exult_studio_installer.iss: set to SVN and setting working folder for Exult Studio start menu item
 
